fix: theme transition shift layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -68,7 +68,7 @@
   }
 }
 
-* {
+.transitions, .transitions * {
   transition: all 0.3s ease-in-out;
 }
 
